package com.sonnhuynhh.primewallet.auth.entity;

/**
 * Enum định nghĩa các vai trò trong hệ thống.
 * - USER: Người dùng thông thường (mặc định khi đăng ký)
 * - ADMIN: Quản trị viên hệ thống
 */
public enum Role {
    USER,
    ADMIN
}
